--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 body {
   font-size: 2em;
   background-color: #EEEEEE;
+  color : #222831;
 }
 
 h2 {
@@ -105,7 +106,7 @@ header .mixed-menu li a:focus::after {
 
 /*...................................PRESENTATION...........*/
 #presentation {
-  padding-bottom : 80px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
 
@@ -121,35 +122,41 @@ header .mixed-menu li a:focus::after {
 
 /*.........................FORMATION.................*/
 #formation {
-  padding-bottom : 80px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
 
 /*.........................EXPERIENCE.................*/
 
 #experience {
-  padding-bottom : 100px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
 
 /*.........................COMPETENCE.................*/
-#competence {
-  columns: 2;
-  padding-bottom : 100px;
+.competence {
+  padding-bottom : 50px;
   padding-top : 30px;
+  background-color: #393E46;
+  color : #EEEEEE;
+  text-align: center;
+}
+#frontback {
+  columns: 2;
+
 }
 
 
 /*.........................FRONT.................*/
 #front {
-  padding-bottom : 100px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
 
 
 /*.........................BACK.................*/
 #back {
-  padding-bottom : 100px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
 
@@ -173,6 +180,6 @@ header .mixed-menu li a:focus::after {
 #contact {
   background-color: #393E46;
   color : #EEEEEE;
-  padding-bottom : 100px;
+  padding-bottom : 50px;
   padding-top : 30px;
 }
