--- a/css/animate.css
+++ b/css/animate.css
@@ -8,23 +8,13 @@
  * Copyright (c) 2016 Daniel Eden
  */
 
-/* ici le temps des animations */
-.animated.un {
-  -webkit-animation-duration: 5s;
-  animation-duration: 2s;
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
-.animated.deux {
-  
-    -webkit-animation-duration: 5s;
-    animation-duration: 5s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-  }
-
-/*au dessus le temps des animations*/
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
