--- a/css/main.css
+++ b/css/main.css
@@ -128,10 +128,11 @@ header .logomenu li {
 
 }
 
-#fleche {
+.fleche {
 
   width: 50px;
   height: 50px;
+
 }
 
 
@@ -216,9 +217,6 @@ header .logomenu li {
 
 
 /*.........................REALISARION.................*/
-#realisation {
-  border-bottom : 5px solid white;
-}
 
 #realisation h2 {
   margin-top: 40px;
@@ -235,11 +233,8 @@ header .logomenu li {
 /*.........................LOISIR.................*/
 
 #loisir {
-  background-color: #C0C0C0;
-  border-bottom : 5px solid #EEEEEE;
-  color : white;
-  text-shadow: 0px 0px 8px black;
-
+  background-color: #FFFFFF;
+  border-bottom : 5px solid #00ADB5;
 }
 
 .imgloisir {
