--- a/page_projet/css/thumbnail-gallery.css
+++ b/page_projet/css/thumbnail-gallery.css
@@ -21,7 +21,7 @@ body {
   background-size: cover;
 }
 
-#ommaniac {
+#ommaniac1 {
   background-image : url("../img/om.maniac.png");
 }
 #premiercv {
