--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -167,7 +167,6 @@ header .logomenu li {
 
 }
 
-/* VOIR SCALE POUR EFFET */
 .logosociaux {
   padding-top: 7px;
   width : 30px;
@@ -351,11 +350,7 @@ header .logomenu li {
  }
 }
 
-/* --------------------------------
-
-FRISE
-
--------------------------------- */
+/* --------------------------------FRISE-------------------------------- */
 
 .community {
   height: 200px;
@@ -372,6 +367,8 @@ FRISE
     margin-left: 100px;
   }
 }
+
+/* Timeline implémenté grâce à https://codyhouse.co/demo/horizontal-timeline/index.html*/
 .cd-horizontal-timeline {
   padding-bottom: 0;
 }
@@ -383,13 +380,9 @@ FRISE
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
-.cd-horizontal-timeline::before {
-  /* never visible - this is used in jQuery to check the current MQ */
-  content: 'mobile';
-  display: none;
-}
+
 .cd-horizontal-timeline.loaded {
-  /* show the timeline after events position has been set (using JavaScript) */
+
   opacity: 1;
 }
 .cd-horizontal-timeline .timeline {
@@ -406,7 +399,7 @@ FRISE
   overflow: hidden;
 }
 .cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
-  /* these are used to create a shadow effect at the sides of the timeline */
+  /* pour créer un effet d'ombre */
   content: '';
   position: absolute;
   z-index: 2;
@@ -416,13 +409,13 @@ FRISE
 }
 
 .cd-horizontal-timeline .events {
-  /* this is the grey line/timeline */
+  /* la ligne bleu */
   position: absolute;
   z-index: 1;
   left: 0;
   top: 49px;
   height: 2px;
-  /* width will be set using JavaScript */
+  /* la largeur est réglé grâce au javascript */
   background: #00ADB5;
   -webkit-transition: -webkit-transform 0.4s;
   -moz-transition: -moz-transform 0.4s;
@@ -507,36 +500,10 @@ FRISE
     margin-top: -350px;
   }
   .cd-horizontal-timeline::before {
-    /* never visible - this is used in jQuery to check the current MQ */
+    {
     content: 'desktop';
   }
 }
-
-.cd-timeline-navigation a {
-  /* these are the left/right arrows to navigate the timeline */
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  bottom: auto;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  height: 34px;
-  width: 34px;
-  border-radius: 50%;
-  border: 2px solid white;
-  /* replace text with an icon */
-  overflow: hidden;
-  color: transparent;
-  text-indent: 100%;
-  white-space: nowrap;
-  -webkit-transition: border-color 0.3s;
-  -moz-transition: border-color 0.3s;
-  transition: border-color 0.3s;
-}
-
 
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
@@ -578,7 +545,7 @@ FRISE
   animation-timing-function: ease-in-out;
 }
 .cd-horizontal-timeline .events-content li.selected {
-  /* visible event content */
+  /* permet la visibilité du contenu */
   position: relative;
   z-index: 2;
   opacity: 1;
@@ -588,21 +555,28 @@ FRISE
   -o-transform: translateX(0);
   transform: translateX(0);
 }
+
+/* permet que la navigation soit fluide en partant de la droite*/
 .cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
   -webkit-animation-name: cd-enter-right;
   -moz-animation-name: cd-enter-right;
   animation-name: cd-enter-right;
 }
+/* permet que la navigation soit fluide en partant de la gauche*/
 .cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-name: cd-enter-left;
   -moz-animation-name: cd-enter-left;
   animation-name: cd-enter-left;
 }
+
+/* fluidifie la navigation*/
 .cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-direction: reverse;
   -moz-animation-direction: reverse;
   animation-direction: reverse;
 }
+
+/*détermination des dimensions ainsi que des tailles de polices des li à l'intérieur de la frise*/
 .cd-horizontal-timeline .events-content li > * {
   max-width: 800px;
   margin: 0 auto;
@@ -800,8 +774,6 @@ FRISE
 }
 
 
-
-
 /*.........................LOISIR.................*/
 
 #loisir {
@@ -925,6 +897,10 @@ a.personal {
 #contact p {
 
   text-align: center;
+}
+
+#contact a {
+  color: #EEEEEE;
 }
 
 #copyright {
