--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -167,6 +167,7 @@ header .logomenu li {
 
 }
 
+/* VOIR SCALE POUR EFFET */
 .logosociaux {
   padding-top: 7px;
   width : 30px;
@@ -350,7 +351,11 @@ header .logomenu li {
  }
 }
 
-/* --------------------------------FRISE-------------------------------- */
+/* --------------------------------
+
+FRISE
+
+-------------------------------- */
 
 .community {
   height: 200px;
@@ -367,8 +372,6 @@ header .logomenu li {
     margin-left: 100px;
   }
 }
-
-/* Timeline implémenté grâce à https://codyhouse.co/demo/horizontal-timeline/index.html*/
 .cd-horizontal-timeline {
   padding-bottom: 0;
 }
@@ -380,9 +383,13 @@ header .logomenu li {
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
-
+.cd-horizontal-timeline::before {
+  /* never visible - this is used in jQuery to check the current MQ */
+  content: 'mobile';
+  display: none;
+}
 .cd-horizontal-timeline.loaded {
-
+  /* show the timeline after events position has been set (using JavaScript) */
   opacity: 1;
 }
 .cd-horizontal-timeline .timeline {
@@ -399,7 +406,7 @@ header .logomenu li {
   overflow: hidden;
 }
 .cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
-  /* pour créer un effet d'ombre */
+  /* these are used to create a shadow effect at the sides of the timeline */
   content: '';
   position: absolute;
   z-index: 2;
@@ -409,13 +416,13 @@ header .logomenu li {
 }
 
 .cd-horizontal-timeline .events {
-  /* la ligne bleu */
+  /* this is the grey line/timeline */
   position: absolute;
   z-index: 1;
   left: 0;
   top: 49px;
   height: 2px;
-  /* la largeur est réglé grâce au javascript */
+  /* width will be set using JavaScript */
   background: #00ADB5;
   -webkit-transition: -webkit-transform 0.4s;
   -moz-transition: -moz-transform 0.4s;
@@ -500,10 +507,36 @@ header .logomenu li {
     margin-top: -350px;
   }
   .cd-horizontal-timeline::before {
-    {
+    /* never visible - this is used in jQuery to check the current MQ */
     content: 'desktop';
   }
 }
+
+.cd-timeline-navigation a {
+  /* these are the left/right arrows to navigate the timeline */
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  bottom: auto;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  border: 2px solid white;
+  /* replace text with an icon */
+  overflow: hidden;
+  color: transparent;
+  text-indent: 100%;
+  white-space: nowrap;
+  -webkit-transition: border-color 0.3s;
+  -moz-transition: border-color 0.3s;
+  transition: border-color 0.3s;
+}
+
 
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
@@ -545,7 +578,7 @@ header .logomenu li {
   animation-timing-function: ease-in-out;
 }
 .cd-horizontal-timeline .events-content li.selected {
-  /* permet la visibilité du contenu */
+  /* visible event content */
   position: relative;
   z-index: 2;
   opacity: 1;
@@ -555,28 +588,21 @@ header .logomenu li {
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-
-/* permet que la navigation soit fluide en partant de la droite*/
 .cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
   -webkit-animation-name: cd-enter-right;
   -moz-animation-name: cd-enter-right;
   animation-name: cd-enter-right;
 }
-/* permet que la navigation soit fluide en partant de la gauche*/
 .cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-name: cd-enter-left;
   -moz-animation-name: cd-enter-left;
   animation-name: cd-enter-left;
 }
-
-/* fluidifie la navigation*/
 .cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-direction: reverse;
   -moz-animation-direction: reverse;
   animation-direction: reverse;
 }
-
-/*détermination des dimensions ainsi que des tailles de polices des li à l'intérieur de la frise*/
 .cd-horizontal-timeline .events-content li > * {
   max-width: 800px;
   margin: 0 auto;
@@ -741,6 +767,9 @@ header .logomenu li {
 
 /*.........................REALISARION.................*/
 
+#realisation {
+  margin-bottom: 100px;
+}
 #realisation h2 {
   margin-top: 40px;
 }
@@ -748,29 +777,50 @@ header .logomenu li {
 #textpro {
   padding-bottom: 50px;
 }
-
-#ordi {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom : 100px;
-    padding-top : 30px;
-    width :1000px;
+#portfolio {
+  height: auto;
+  margin: 50px 0;
+  color: #E0E0E0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+#portfolio div {
+  width: 100%;
 }
 
-
-@media (max-width: 768px) {
-  #ordi {
-    width: 290px;
-    height: 290px;
-  }
+.lien {
+  margin-bottom: 30px;
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
-  #ordi {
-    width: 620px;
-    height: 620px;
-  }
+.realisations a.lien {
+  color: #E0E0E0;
+  text-decoration: none;
+}
+.realisations a:hover.lien {
+  color: #00ADB5;
+}
+.all-projects {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.projet {
+  opacity: 0.5;
+
+}
+.projet:hover {
+  opacity: 1;
+  border-color:#00ADB5;
+}
+.descrip {
+  margin-top: 10px;
+  line-height: 30px;
+}
+
+span {
+  color :#222831;
 }
 
 
@@ -899,17 +949,15 @@ a.personal {
   text-align: center;
 }
 
-#contact a {
-  color: #EEEEEE;
-}
-
 #copyright {
-
   padding-top: 30px;
   font-size: 0.8em;
   letter-spacing: 5px;
 }
 
+.mail {
+  color :#EEEEEE;
+}
 
 @media (max-width: 768px) {
   #copyright {
