--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -61,6 +61,7 @@ h2 {
 }
 
 h3 {
+    text-align: center;
     padding-bottom: 35px;
 }
 
@@ -842,7 +843,6 @@ span {
   .imgloisir {
     width: 450px;
     height: 300px;
-
   }
 }
 
@@ -861,18 +861,19 @@ figure.imghvr-zoom-in {
 #passion {
   display: flex;
   justify-content: center;
+  margin-left: 50px;
   margin-bottom: 100px;
 
 }
 
 @media (max-width: 768px) {
 #passion {
-
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
   margin-bottom: 100px;
-
 }
 }
-
 
 .elementpassion {
   color : #00ADB5;
@@ -898,20 +899,21 @@ a.personal {
   color : #00ADB5;
 }
 
-
-#ommaniac {
-  padding-top: 30px;
-  padding-right: 50px;
-  padding-left: 50px;
-  height: 200px;
-  width: 350px;
+#imgstartup {
+  display:block;
+  width:auto;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 20px;
+  height: 300px;
 }
 
 @media (max-width: 768px) {
-  #ommaniac {
+  #startup {
     display: none;
   }
 }
+
 /*.........................CONTACT.................*/
 #footer {
   background-color: #393E46;
